--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 	<title>Get Jackpot Round</title>
 	<script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
-	<style>
+		<style>
 		body {
-			background: linear-gradient(to bottom right, #5f2c82, #49a09d);
+			background-color: #5f2c82;
 			color: #fff;
 		}
 		h1 {
 			text-align: center;
 		}
 		button {
-			background: linear-gradient(to bottom right, #cc2b5e, #753a88);
+			background-color: #cc2b5e;
 			color: #fff;
 			padding: 10px 20px;
 			border: none;
@@ -31,8 +31,9 @@
 			border-radius: 20px;
 			padding: 10px;
 			margin-top: 20px;
-			background: linear-gradient(to bottom right, #cc2b5e, #753a88);
+			background-color: #cc2b5e;
 			text-align: center;
+			background-image: none;
 		}
 		#output p, #winnerOutput p {
 			margin: 10px;
