--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ input[type="text"] {
     background-image: linear-gradient(to bottom right, #cc2b5e, #5f2c82);
     background-size: 100%;
     transition: background-size 0.5s ease;
+    width: 60%;
 }
 
 #output.show, #winnerOutput.show {
