--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ input[type="text"] {
     background-size: 100%;
     transition: background-size 0.5s ease;
     width: 60%;
+    align: center;
 }
 
 #output.show, #winnerOutput.show {
