--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ input[type="text"] {
     border-radius: 20px;
     padding: 10px;
     margin-top: 20px;
+    margin-left: 20%;
     text-align: center;
     background: none;
     background-image: linear-gradient(to bottom right, #cc2b5e, #5f2c82);
     background-size: 100%;
     transition: background-size 0.5s ease;
     width: 60%;
-    position: center;
 }
 
 #output.show, #winnerOutput.show {
