--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ input[type="text"] {
 }
 
 #output, #winnerOutput {
+    display: none;
     border-radius: 20px;
     padding: 10px;
     margin-top: 20px;
