--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
 		<style>
 		body {
-    background-color: #5f2c82;
+    background-image: url("paper.gif");
     color: #fff;
 }
 
