--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		body {
     background-image: url("bg.jpg");
      background-filter: blur(8px);
-background-size:fit;
-     background-position: no-repeat center center;
+background-size:cover;
+     background-position: center;
 
 color: #fff;
 }
